--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.0.2",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.2"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
